--- a/Homework/01.md
+++ b/Homework/01.md
@@ -23,3 +23,31 @@ CHIP Not {
     Nand(a=in, b=in, out=out); //a=in,b=in是內部皆限制外部
 }
 ```
+
+
+# AND
+<img src="../零件/01/and.jpg" width="300" height="200"  align=center />
+
+ˋˋˋ
+// This file is part of www.nand2tetris.org
+// and the book "The Elements of Computing Systems"
+// by Nisan and Schocken, MIT Press.
+// File name: projects/01/And.hdl
+
+/**
+ * And gate: 
+ * out = 1 if (a == 1 and b == 1)
+ *       0 otherwise
+ */
+
+CHIP And {
+    IN a, b;
+    OUT out;
+
+    PARTS:
+    Nand(a=a, b=b, out=ANandB);//NAND = AND + NOT
+    Not(in=ANandB, out=out);// NAND + NOT = AND
+    // Put your code here:
+
+
+ˋˋˋ
