--- a/Homework/01.md
+++ b/Homework/01.md
@@ -27,6 +27,8 @@ CHIP Not {
 
 # AND
 <img src="../零件/01/and.jpg" width="300" height="200"  align=center />
+> NAND = AND + NOT
+NAND + NOT = AND
 
 ```
 // This file is part of www.nand2tetris.org
@@ -45,8 +47,8 @@ CHIP And {
     OUT out;
 
     PARTS:
-    Nand(a=a, b=b, out=ANandB);//NAND = AND + NOT
-    Not(in=ANandB, out=out);// NAND + NOT = AND
+    Nand(a=a, b=b, out=ANandB);
+    Not(in=ANandB, out=out);
     // Put your code here:
 }
 
