--- a/Homework/01.md
+++ b/Homework/01.md
@@ -4,16 +4,6 @@
 <img src="../零件/01/not.jpg" width="300" height="200"  align=center /> 
 
 ```
-// This file is part of www.nand2tetris.org
-// and the book "The Elements of Computing Systems"
-// by Nisan and Schocken, MIT Press.
-// File name: projects/01/Not.hdl
-
-/**
- * Not gate:
- * out = not in
- */
-
 CHIP Not {
     IN in;
     OUT out;
@@ -29,17 +19,6 @@ CHIP Not {
 <img src="../零件/01/and.jpg" width="300" height="200"  align=center />
 
 ```
-// This file is part of www.nand2tetris.org
-// and the book "The Elements of Computing Systems"
-// by Nisan and Schocken, MIT Press.
-// File name: projects/01/And.hdl
-
-/**
- * And gate: 
- * out = 1 if (a == 1 and b == 1)
- *       0 otherwise
- */
-
 CHIP And {
     IN a, b;
     OUT out;
@@ -50,4 +29,38 @@ CHIP And {
     // Put your code here:
 }
 
+```
+
+# OR
+<img src="../零件/01/or.jpg" width="300" height="200"  align=center /> 
+
+```
+CHIP Or {
+    IN a, b;
+    OUT out;
+
+    PARTS:
+    Not(in=a, out=aNot);
+    Not(in=b, out=bNot);
+    Nand(a=aNot, b=bNot, out=out);
+    // Put your code here:
+}
+```
+
+# XOR
+<img src="../零件/01/xor.jpg" width="300" height="200"  align=center />
+
+```
+CHIP Xor {
+    IN a, b;
+    OUT out;
+
+    PARTS:
+    Not(in=a, out=na);
+    Not(in=b, out=nb);
+    And(a=a, b=nb, out=Anb);
+    And(a=na, b=b, out=naB);
+    Or(a=Anb, b=naB, out=out);
+    // Put your code here:
+}
 ```
