--- a/Homework/01.md
+++ b/Homework/01.md
@@ -64,3 +64,32 @@ CHIP Xor {
     // Put your code here:
 }
 ```
+# NOT
+<img src="../零件/01/not.jpg" width="300" height="200"  align=center /> 
+
+```
+CHIP Not {
+    IN in;
+    OUT out;
+
+    PARTS:
+    // Put your code here:
+    Nand(a=in, b=in, out=out); //a=in,b=in是內部皆限制外部
+}
+```
+# MUX
+<img src="../零件/01/mux.jpg" width="300" height="200"  align=center />
+
+```
+CHIP Mux {
+    IN a, b, sel;
+    OUT out;
+
+    PARTS:
+    Not(in=sel, out=nsel);
+    And(a=sel, b=b, out=bsel);
+    And(a=a, b=nsel, out=ansel);
+    Or(a=ansel, b=bsel, out=out);
+    // Put your code here:
+}
+```
