--- a/Homework/01.md
+++ b/Homework/01.md
@@ -64,19 +64,6 @@ CHIP Xor {
     // Put your code here:
 }
 ```
-# NOT
-<img src="../零件/01/not.jpg" width="300" height="200"  align=center /> 
-
-```
-CHIP Not {
-    IN in;
-    OUT out;
-
-    PARTS:
-    // Put your code here:
-    Nand(a=in, b=in, out=out); //a=in,b=in是內部皆限制外部
-}
-```
 # MUX
 <img src="../零件/01/mux.jpg" width="300" height="200"  align=center />
 
@@ -90,6 +77,21 @@ CHIP Mux {
     And(a=sel, b=b, out=bsel);
     And(a=a, b=nsel, out=ansel);
     Or(a=ansel, b=bsel, out=out);
+    // Put your code here:
+}
+```
+# DMUX
+<img src="../零件/01/dmux.jpg" width="300" height="200"  align=center /> 
+
+```
+CHIP DMux {
+    IN in, sel;
+    OUT a, b;
+
+    PARTS:
+    Not(in=sel, out=nsel);
+    And(a=in, b=nsel, out=a);
+    And(a=in, b=sel, out=b);
     // Put your code here:
 }
 ```
