--- a/Homework/01.md
+++ b/Homework/01.md
@@ -2,13 +2,23 @@
 
 # NOT
 <img src="../零件/01/not.jpg" width="300" height="200"  align=center /> 
-ˋˋˋ
+```
+// This file is part of www.nand2tetris.org
+// and the book "The Elements of Computing Systems"
+// by Nisan and Schocken, MIT Press.
+// File name: projects/01/Not.hdl
+
+/**
+ * Not gate:
+ * out = not in
+ */
+
 CHIP Not {
     IN in;
     OUT out;
 
     PARTS:
     // Put your code here:
-    Nand(a=in, b=in, out=out);
+    Nand(a=in, b=in, out=out); //a=in,b=in是內部皆限制外部
 }
-ˋˋˋ
+```
