--- a/Homework/01.md
+++ b/Homework/01.md
@@ -13,7 +13,7 @@ CHIP Not {
 }
 ```
 # AND
-<img src="../零件/01/AND.jpg" width="300" height="200"  align=center /> 
+<img src="../零件/01/and.jpg" width="300" height="200"  align=center /> 
 
 ```
 CHIP And {
@@ -27,7 +27,8 @@ CHIP And {
 }
 ```
 # OR
-<img src="../零件/01/OR.jpg" width="300" height="200"  align=center /> 
+<img src="../零件/01/or.jpg" width="300" height="200"  align=center /> 
+
 ```
 CHIP Or {
     IN a, b;
@@ -41,5 +42,35 @@ CHIP Or {
 }
 ``` 
 
-#
+# MUX
+<img src="../零件/01/mux.jpg" width="300" height="200"  align=center /> 
 
+```
+CHIP Mux {
+    IN a, b, sel;
+    OUT out;
+
+    PARTS:
+    Not(in=sel, out=nsel);
+    And(a=sel, b=b, out=bsel);
+    And(a=a, b=nsel, out=ansel);
+    Or(a=ansel, b=bsel, out=out);
+    // Put your code here:
+}
+``` 
+
+# DMUX
+<img src="../零件/01/mux.jpg" width="300" height="200"  align=center />
+
+```
+CHIP DMux {
+    IN in, sel;
+    OUT a, b;
+
+    PARTS:
+    Not(in=sel, out=nsel);
+    And(a=in, b=nsel, out=a);
+    And(a=in, b=sel, out=b);
+    // Put your code here:
+}
+```
