--- a/Homework/01.md
+++ b/Homework/01.md
@@ -43,7 +43,7 @@ CHIP Or {
 ``` 
 
 # MUX
-<img src="../零件/01/mux.jpg" width="300" height="200"  align=center /> 
+<img src="../零件/01/mux.jpg" width="400" height="200"  align=center /> 
 
 ```
 CHIP Mux {
@@ -60,7 +60,7 @@ CHIP Mux {
 ``` 
 
 # DMUX
-<img src="../零件/01/mux.jpg" width="300" height="200"  align=center />
+<img src="../零件/01/dmux.jpg" width="400" height="200"  align=center />
 
 ```
 CHIP DMux {
