--- a/Homework/03.md
+++ b/Homework/03.md
@@ -2,7 +2,7 @@
 
 ## HalfAdder
 
-<img src="../零件/02/mux.jpg" width="400" height="200"  align=center /> 
+<img src="../零件/02/halfadder.jpg" width="400" height="200"  align=center /> 
 
 ```
 CHIP HalfAdder {
@@ -19,7 +19,7 @@ CHIP HalfAdder {
 
 ## FullAdder
 
-<img src="../零件/02/mux.jpg" width="400" height="200"  align=center /> 
+<img src="../零件/02/fulladder.jpg" width="400" height="200"  align=center /> 
 
 ```
 CHIP FullAdder {
