--- a/Homework/03.md
+++ b/Homework/03.md
@@ -38,7 +38,7 @@ CHIP FullAdder {
 
 ## Add16
 
-<img src="../零件/02/Add16.jpg" width="400" height="200"  align=center /> 
+<img src="../零件/02/add16.jpg" width="500" height="200"  align=center /> 
 
 ```
 CHIP Add16 {
@@ -69,7 +69,7 @@ CHIP Add16 {
 
 ## Inc16
 
-<img src="../零件/02/Inc16.jpg" width="400" height="200"  align=center /> 
+<img src="../零件/02/inc16.jpg" width="400" height="200"  align=center /> 
 
 ```
 CHIP Inc16 {
