--- a/Homework/02.md
+++ b/Homework/02.md
@@ -1,10 +1,10 @@
 ## 迪摩根定理證明
-<img src="零件/01/迪摩根.jpg">
+<img src="../零件/01/迪摩根.jpg">
 
 ## 第一章剩下的題目
 ## Not16
 
- <img src="零件/01/not16.jpg" width="600" height="400"  align=center /> 
+ <img src="../零件/01/not16.jpg" width="600" height="400"  align=center /> 
 
 
 ```
@@ -48,7 +48,7 @@ CHIP Not16 {
 ```
 ## And16
 
-<img src="零件/01/and16.jpg" width="600" height="400"  align=center /> 
+<img src="../零件/01/and16.jpg" width="600" height="400"  align=center /> 
 
 
 ```
@@ -87,7 +87,7 @@ CHIP And16 {
 ```
 ## Or16
 
-<img src="零件/01/or16.jpg" width="600" height="400"  align=center /> 
+<img src="../零件/01/or16.jpg" width="600" height="400"  align=center /> 
 
 
 ```
@@ -127,7 +127,7 @@ CHIP Or16 {
 ```
 ## Mux16
 
-<img src="零件/01/mux16.jpg" width="600" height="400"  align=center /> 
+<img src="../零件/01/mux16.jpg" width="600" height="400"  align=center /> 
 
 
 ```
@@ -168,7 +168,7 @@ CHIP Mux16 {
 ```
 ## Or8Way
 
-<img src="零件/01/or8Way.jpg" width="600" height="500"  align=center />
+<img src="../零件/01/or8Way.jpg" width="600" height="500"  align=center />
 
 
 ```
@@ -209,9 +209,7 @@ CHIP Or8Way {
 }
 ```
 ## Mux4Way16
-
-<img src="零件/01/mux4way16.jpg" width="600" height="500"  align=center />
-
+<img src="../零件/01/mux4way16.jpg" width="600" height="500"  align=center />
 
 ```
 // This file is part of www.nand2tetris.org
@@ -238,21 +236,15 @@ CHIP Mux4Way16 {
     Mux16(a=x, b=y, sel=sel[1], out=out);
 }
 ```
+
 ## Mux8Way16
-<img src="零件/01/mux8way16.jpg" width="600" height="500"  align=center />
+<img src="../零件/01/mux8way16.jpg" width="600" height="500"  align=center />
+
 ```
 // This file is part of www.nand2tetris.org
 // and the book "The Elements of Computing Systems"
 // by Nisan and Schocken, MIT Press.
 // File name: projects/01/Mux8Way16.hdl
-
-/**
- * 8-way 16-bit multiplexor:
- * out = a if sel == 000
- *       b if sel == 001
- *       etc.
- *       h if sel == 111
- */
 
 CHIP Mux8Way16 {
     IN a[16], b[16], c[16], d[16],
@@ -271,37 +263,11 @@ CHIP Mux8Way16 {
     
     Mux16(a=E, b=F, sel=sel[2], out=out);
 }
-```
-## DMux4Way
-<img src="零件/01/DMux4Way.jpg" width="600" height="500"  align=center />
 
-```
-// This file is part of www.nand2tetris.org
-// and the book "The Elements of Computing Systems"
-// by Nisan and Schocken, MIT Press.
-// File name: projects/01/DMux4Way.hdl
-
-/**
- * 4-way demultiplexor:
- * {a, b, c, d} = {in, 0, 0, 0} if sel == 00
- *                {0, in, 0, 0} if sel == 01
- *                {0, 0, in, 0} if sel == 10
- *                {0, 0, 0, in} if sel == 11
- */
-
-CHIP DMux4Way {
-    IN in, sel[2];
-    OUT a, b, c, d;
-
-    PARTS:
-    // Put your code here:
-    DMux(in=in, sel=sel[1], a=d1, b=d2);
-    DMux(in=d1, sel=sel[0], a=a, b=b);
-    DMux(in=d2, sel=sel[0], a=c, b=d);
-} 
 ```
 ## DMux8Way
-<img src="零件/01/DMux8Way.jpg" width="600" height="500"  align=center />
+<img src="../零件/01/DMux8Way.jpg" width="600" height="500"  align=center />
+
 
 ```
 // This file is part of www.nand2tetris.org
