--- a/Homework/02.md
+++ b/Homework/02.md
@@ -267,21 +267,9 @@ CHIP Mux8Way16 {
 ```
 
 ## DMux4Way
-<img src="../零件/01/Dmux4way.jpg" width="600" height="500"  align=center />
+<img src="../零件/01/dmux4way.jpg" width="600" height="500"  align=center />
+
 ```
-// This file is part of www.nand2tetris.org
-// and the book "The Elements of Computing Systems"
-// by Nisan and Schocken, MIT Press.
-// File name: projects/01/DMux4Way.hdl
-
-/**
- * 4-way demultiplexor:
- * {a, b, c, d} = {in, 0, 0, 0} if sel == 00
- *                {0, in, 0, 0} if sel == 01
- *                {0, 0, in, 0} if sel == 10
- *                {0, 0, 0, in} if sel == 11
- */
-
 CHIP DMux4Way {
     IN in, sel[2];//sel[1]  sel[0]
     OUT a, b, c, d;
@@ -308,10 +296,10 @@ CHIP DMux4Way {
     DMux(in=d2, sel=sel[0], a=c, b=d);
     // Put your code here:
 }
-
+```
 
 ## DMux8Way
-<img src="../零件/01/DMux8Way.jpg" width="600" height="500"  align=center />
+<img src="../零件/01/dmux8way.jpg" width="600" height="500"  align=center />
 
 
 ```
