--- a/Homework/07.md
+++ b/Homework/07.md
@@ -1,5 +1,5 @@
 ## PC
-<img src="../零件/03/PC.jpg" width="800" height="400"  align=center /> 
+<img src="../零件/03/PC.jpg" width="8                                                          00" height="400"  align=center /> 
 
 ```
 // This file is part of www.nand2tetris.org
