--- a/Homework/11.md
+++ b/Homework/11.md
@@ -1,3 +1,9 @@
+## CPU
+
+<img src="../零件/05/CPU.jpg" width="1000" height="600"  align=center /> 
+
+```
+
 // This file is part of www.nand2tetris.org
 // and the book "The Elements of Computing Systems"
 // by Nisan and Schocken, MIT Press.
@@ -84,3 +90,5 @@ CHIP CPU {
     
     // Put your code here:
 }
+
+```
