--- a/Homework/10.md
+++ b/Homework/10.md
@@ -1,3 +1,8 @@
+## Memory
+
+<img src="../零件/05/memory.jpg" width="1000" height="600"  align=center /> 
+
+```
 // This file is part of www.nand2tetris.org
 // and the book "The Elements of Computing Systems"
 // by Nisan and Schocken, MIT Press.
@@ -37,3 +42,5 @@ CHIP Memory {
     Mux4Way16(a=r, b=r, c=sc, d=k, sel=address[13..14], out=out);
     // Put your code here:
 }
+
+```
