--- a/Homework/08EX.md
+++ b/Homework/08EX.md
@@ -1,1 +1,1 @@
-<img src="../零件/08/ex.jpg" width="1000" height="600"  align=center /> 
+<img src="../零件/08EX/ex.jpg" width="1000" height="600"  align=center /> 
