--- a/Homework/08.md
+++ b/Homework/08.md
@@ -1,3 +1,5 @@
+## mult.asm
+
 ## C程式碼
 
 ```
@@ -55,3 +57,4 @@ M=M-1
 (EXIT)
 0;JMP
 ```
+<img src="../零件/04/mult.jpg" width="500" height="600"  align=center /> 
