--- a/Homework/01.md
+++ b/Homework/01.md
@@ -41,6 +41,33 @@ CHIP Or {
     // Put your code here:
 }
 ``` 
+# Xor
+<img src="../零件/01/xor.jpg" width="300" height="200"  align=center /> 
+
+```
+// This file is part of www.nand2tetris.org
+// and the book "The Elements of Computing Systems"
+// by Nisan and Schocken, MIT Press.
+// File name: projects/01/Xor.hdl
+
+/**
+ * Exclusive-or gate:
+ * out = not (a == b)
+ */
+
+CHIP Xor {
+    IN a, b;
+    OUT out;
+
+    PARTS:
+    Not(in=a, out=na);
+    Not(in=b, out=nb);
+    And(a=a, b=nb, out=Anb);
+    And(a=na, b=b, out=naB);
+    Or(a=Anb, b=naB, out=out);
+    // Put your code here:
+}
+```
 
 # MUX
 <img src="../零件/01/mux.jpg" width="400" height="200"  align=center /> 
