--- a/Homework/01.md
+++ b/Homework/01.md
@@ -41,7 +41,7 @@ CHIP Or {
     // Put your code here:
 }
 ``` 
-# Xor
+# XOR
 <img src="../零件/01/xor.jpg" width="300" height="200"  align=center /> 
 
 ```
